firefox-3.0 (3.0+nobinonly-0ubuntu3) UNRELEASED; urgency=low

  * Add an empty chrome.manifest in all extensions missing that
    file so it prevents the "failure in Chrome Registration" popup
    - update debian/rules

 -- Fabien Tassin <fta@sofaraway.org>  Sat, 14 Jun 2008 18:56:49 +0200

firefox-3.0 (3.0+nobinonly-0ubuntu2) intrepid; urgency=low

  * New upstream release: 3.0 RC2 (LP: #237690)

  [ Alexander Sack <asac@ubuntu.com> ]
  * Fix LP: #236266 - "Build Failure on HPPA architecture" by applying patch
    from bugzilla https://bugzilla.mozilla.org/show_bug.cgi?id=436133
    - add debian/patches/bz436133_att322801.patch
    - update debian/patches/series
  * drop left-over patch that disabled parts of safe-browsing by default.
    - delete debian/patches/force_safebrowsing_off.patch
    - update debian/firefox.js
    - update debian/patches/series

 -- Alexander Sack <asac@ubuntu.com>  Tue, 10 Jun 2008 12:51:01 +0200

firefox-3.0 (3.0~rc1+nobinonly-0ubuntu1) intrepid; urgency=low

  * new upstream release 3.0 RC1 (LP: #233922)

  [ Fabien Tassin <fta@sofaraway.org> ]
  * Bump xulrunner-1.9 dependencies to ~rc
    - update debian/control
  * Bump EM_TRANSLATION_VERSION and EM_TRANSLATION_{MIN,MAX}_VERSION to 3.0
    and clean-up the code to avoid unnecessary complexity
    - update debian/rules
  * Refresh diverged patches
    - update debian/patches/bzXXX_reload_new_plugins.patch
  * Fix 'Categories' field in desktop file by changing GTK into Application
    to make KDE happy (LP: #220325)
    - update debian/firefox-3.0-final.desktop
  * Build with default gcc (hardy: 4.2, intrepid: 4.3)
    - update debian/rules
    - update debian/control
  * Prevent EULA dialog to popup on first run by setting the browser.EULA.override
    key to true
    - update debian/firefox.js
  * Drop LDFLAGS workaround now that jemalloc is no longer a static lib
    - udate debian/rules
  * Workaround multiple crashes in Intrepid caused by Intrepid shipping gcc 4.3 